# pythonradex

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  README.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: draft-pdf.yml  publish_to_pypi.yml  run_tests.yml  testing.yml
docs/: .readthedocs.yaml  API.rst  Makefile  benchmark_vs_RADEX.rst  citation.rst  conf.py  contact.rst  difference_pythonradex_RADEX.rst  examples.rst  faq.rst  geometry.rst  help.rst  index.rst  installation.rst  requirements.txt  theory.rst
docs/images/: readme_sketches.txt  readme_static_sphere_sketch.txt  sketch_LVG_sphere.odg  sketch_static_slab.odg  sketch_static_sphere.odg
docs/notebooks/: LVG_geometry.ipynb  RADEX_wrapper.py  benchmark_vs_RADEX.ipynb  continuum_effects.ipynb  get_started.ipynb  grid_search.ipynb  optically_thick_spectrum.ipynb  overlapping_lines.ipynb  performance_comparison_vs_RADEX.ipynb  reading_LAMDA_files.ipynb  simple_example.ipynb  test_notebook.ipynb
examples/: example.py  example_radiative_transfer.py  example_reading_LAMDA_files.py
joss_paper/: make_figure.py  paper.bib  paper.md  preprint_for_arxiv.tex
joss_paper/arxiv/: paper.tex  preprint_for_arxiv.tex
joss_paper/code/: benchmark_AndresMegias_modified.py  benchmark_AndresMegias_original.py  compare_flux_formulae_spherical_geometry.py  compare_pythonradex_RADEX.py  molpop.inp  molpop_cep_instructions.txt  overlapping_lines_example.py
manual_test_and_benchmarks/emerging_flux/: check_sphere_flux.py
manual_test_and_benchmarks/explore_dust/: check_dust_influence.py
manual_test_and_benchmarks/investigate_average_over_phi_nu/: compare_averaged_beta_to_beta_nu0.py
manual_test_and_benchmarks/molpop-cep_benchmark/: oh_model_with_modified_atomic_data.py
manual_test_and_benchmarks/performance_tests/: flux_performance.py  ng_acceleration_performance.py  run_cloud.py  run_cloud_grid.py
manual_tests_and_benchmarks/: general.py
manual_tests_and_benchmarks/RADEX_wrapper/: radex_wrapper.py  test_radex_wrapper.py
manual_tests_and_benchmarks/Radex/: standard.out
manual_tests_and_benchmarks/benchmarking_vs_RADEX_and_LIME/: RADEX_vs_pythonradex_vs_LIME.py  pyLime_long_moldata_file_crash.py
manual_tests_and_benchmarks/check_GammaC_interpolation/: check_GammaC_interpolation.py
manual_tests_and_benchmarks/compare_geometry_betas/: compare_betas.py
manual_tests_and_benchmarks/emerging_flux/: check_rectangular_to_Gaussian_conversion.py  check_sphere_flux.py  compare_emerging_flux_formula.py  thin_flux_sphere_vs_RADEX.py
manual_tests_and_benchmarks/lime/: pyLime.py  (+1 more)
pythonradex/: LAMDA_file.py  __init__.py  atomic_transition.py  escape_probability.py  escape_probability_functions.py  flux.py  helpers.py  molecule.py  nebula.py  radiative_transfer.py  rate_equations.py
scripts/: set_version_from_tag.py
tests/: RADEX_test_cases.py  test_LAMDA_file.py  test_LTE.py  test_atomic_transition.py  test_dust.py  test_escape_probability.py  test_escape_probability_functions.py  test_flux.py  test_helpers.py  test_intensity.py  test_molecule.py  test_negative_optical_depth.py  test_overlapping_lines.py  test_radiative_transfer.py  test_rate_equations.py  test_vs_RADEX.py
(+1175 files in other folders)
