[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pythonradex"
description = '1D non-LTE radiative transfer'
readme = "README.txt"
requires-python = ">=3.10"
license = "MIT"
keywords = ['radiative transfer', 'radex', 'non-LTE']
authors = [
  { name = "Gianni Cataldi", email = "cataldi.gia@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ['scipy>=1.14','numpy>=2.0','numba>=0.61.0']
dynamic = ["version"]

[project.optional-dependencies]
notebooks = ["matplotlib", "jupyter", "pandas"]
dev = ["pytest",]

[tool.hatch.version]
source = "vcs"

[project.urls]
Documentation = "https://pythonradex.readthedocs.io/en/latest/"
Issues = "https://github.com/gica3618/pythonradex/issues"
Source = "https://github.com/gica3618/pythonradex"
